# kronos-chatbot

./: .dockerignore  LICENSE  Makefile  README.md  pyproject.toml
assistant/: app.py  assistant.py  chatbot.py  doc_loaders.py  utils.py
assistent/: app.py  chatbot.py  chatdb.py  sessions.py  utils.py
docker/: Dockerfile  docker-compose.yml  requirements.txt
tests/: app_test.py  assitant_test.py  chatbot_test.py  chatdb_test.py  doc_loaders_test.py  sessions_test.py  test.py  utils_test.py
