[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["joaoallmeida <joaoallmeida96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.8"
langchain = "^0.3.2"
langchain-groq = "^0.2.0"
langchain-community = "^0.3.1"
setuptools = "^75.1.0"
python-dotenv = "^1.0.1"
streamlit = "^1.39.0"
pymongo = {extras = ["srv"], version = "^4.10.1"}
faiss-cpu = "^1.9.0"
sentence-transformers = "^3.2.1"
langchain-huggingface = "^0.1.2"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
