[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["joaoallmeida <joaoallmeida96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.3.2"
langchain-groq = "^0.2.0"
langchain-community = "^0.3.1"
setuptools = "^75.1.0"
python-dotenv = "^1.0.1"
streamlit = "^1.39.0"
pymongo = {extras = ["srv"], version = "^4.10.1"}
sentence-transformers = "^3.2.1"
pypdf = "^5.1.0"
ipykernel = "^6.29.5"
rapidocr-onnxruntime = "^1.4.4"
langchain-core = "^0.3.41"
qdrant-client = "^1.13.3"
fastembed = "^0.6.0"
langchain-qdrant = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
